// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography renders with default props 1`] = `
<p
  className="body-1 "
>
  Test
</p>
`;

exports[`Typography supports a set of variants 1`] = `
<h1
  className="heading-1 "
>
  Test
</h1>
`;

exports[`Typography supports a set of variants 2`] = `
<h2
  className="heading-2 "
>
  Test
</h2>
`;

exports[`Typography supports a set of variants 3`] = `
<h3
  className="heading-3 "
>
  Test
</h3>
`;

exports[`Typography supports a set of variants 4`] = `
<h4
  className="heading-4 "
>
  Test
</h4>
`;

exports[`Typography supports a set of variants 5`] = `
<p
  className="body-1 "
>
  Test
</p>
`;

exports[`Typography supports a set of variants 6`] = `
<p
  className="body-2 "
>
  Test
</p>
`;

exports[`Typography supports a set of variants 7`] = `
<p
  className="body-3 "
>
  Test
</p>
`;

exports[`Typography supports custom className 1`] = `
<p
  className="body-1 test-class-name"
>
  Test
</p>
`;

exports[`Typography supports custom component 1`] = `
<div
  className="body-1 "
>
  Test
</div>
`;

exports[`Typography supports custom styles 1`] = `
<p
  className="body-1 "
  style={
    {
      "textDecoration": "underline",
    }
  }
>
  Test
</p>
`;
